# studymate

./: .env.example  .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/api/: client.js
client/src/components/: Layout.css  Layout.jsx  ProtectedRoute.jsx  Sidebar.css  Sidebar.jsx  mode-toggle.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: AuthPages.css  ChatPage.css  ChatPage.jsx  DashboardPage.css  DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx  StudyPage.css  StudyPage.jsx
server/: pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 1b65b6b797e4_initial.py
server/app/: main.py
server/app/core/: config.py  database.py  security.py  valkey.py
server/app/models/: __init__.py  chat.py  chunk.py  document.py  user.py
server/app/schemas/: chat.py  document.py  study.py  user.py
