[project]
name = "studymate-server"
version = "0.1.0"
description = "StudyMate — AI-powered study assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "pypdf>=4.0.0",
    "google-genai>=1.0.0",
    "ollama>=0.4.0",
    "pwdlib[bcrypt]>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "openai>=2.44.0",
    "valkey>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
